--- a/.github/workflows/generator-macos.yml
+++ b/.github/workflows/generator-macos.yml
@@ -55,22 +55,21 @@ on:
         type: string
 
 env:
-  # Default versions for RustDesk >= 1.4.0
-  SCITER_RUST_VERSION: "1.75"  # https://github.com/rustdesk/rustdesk/discussions/7503
-  RUST_VERSION: "1.75"  # sciter failed on m1 with 1.78
-  MAC_RUST_VERSION: "1.81"
+  SCITER_RUST_VERSION: "1.75" # https://github.com/rustdesk/rustdesk/discussions/7503, also 1.78 has ABI change which causes our sciter version not working, https://blog.rust-lang.org/2024/03/30/i128-layout-update.html
+  RUST_VERSION: "1.75" # sciter failed on m1 with 1.78 because of https://blog.rust-lang.org/2024/03/30/i128-layout-update.html
+  MAC_RUST_VERSION: "1.81" 
   CARGO_NDK_VERSION: "3.1.2"
   SCITER_ARMV7_CMAKE_VERSION: "3.29.7"
   SCITER_NASM_DEBVERSION: "2.14-1"
   LLVM_VERSION: "15.0.6"
   FLUTTER_VERSION: "3.24.5"
-  ANDROID_FLUTTER_VERSION: "3.24.5"
-  FLUTTER_RUST_BRIDGE_VERSION: "1.80.1"
+  ANDROID_FLUTTER_VERSION: "3.24.5" # >= 3.16 is very slow on my android phone, but work well on most of others. We may switch to new flutter after changing to texture rendering (I believe it can solve my problem).
+  FLUTTER_RUST_BRIDGE_VERSION: "1.80.1"  # for arm64 linux because official Dart SDK does not work
   FLUTTER_ELINUX_VERSION: "3.16.9"
   TAG_NAME: "${{ inputs.upload-tag }}"
   VCPKG_BINARY_SOURCES: "clear;x-gha,readwrite"
-  # vcpkg version: 2024.07.12
-  VCPKG_COMMIT_ID: "120deac3062162151622ca4860575a33844ba10b"
+  # vcpkg version: 2024.07.12 (updated to latest)
+  VCPKG_COMMIT_ID: "6f29f12e82a8293156836ad81cc9bf5af41fe836"
   VERSION: "${{ fromJson(inputs.extras).version }}"
   NDK_VERSION: "r27c"
   #signing keys env variable checks
@@ -100,21 +99,14 @@ jobs:
       fail-fast: false
       matrix:
         job:
-          #- {
-          #    target: x86_64-apple-darwin,
-          #    os: macos-13,
-          #    extra-build-args: "",
-          #    arch: x86_64,
-          #    vcpkg-triplet: x64-osx,
-          #  }
           - {
               target: aarch64-apple-darwin,
               os: macos-latest,
-              extra-build-args: "--screencapturekit",
+              extra-build-args: "",
               arch: aarch64,
               vcpkg-triplet: arm64-osx,
             }
-
+          
     steps:
       - name: Export GitHub Actions cache environment variables
         uses: actions/github-script@v6
@@ -146,22 +138,13 @@ jobs:
             repository: rustdesk/rustdesk
             ref: refs/tags/${{ env.VERSION }}
             submodules: recursive
-    
+
       - name: Checkout source code
         if: ${{ env.VERSION == 'master' }}
         uses: actions/checkout@v4
         with:
             repository: rustdesk/rustdesk
             submodules: recursive
-
-      - name: Restore bridge files
-        uses: actions/download-artifact@master
-        with:
-              name: bridge-artifact
-              path: ./
-
-      - name: Uninstall existing cmake
-        run: brew uninstall cmake || true
 
       - name: Install imagemagick and potrace and nasm and and
         shell: bash
@@ -236,6 +219,7 @@ jobs:
           sed -i -e 's|"RustDesk"|"${{ inputs.appname }}"|' ./flutter/windows/runner/Runner.rc
           # ./src/lang/en.rs
           find ./src/lang -name "*.rs" -exec sed -i -e 's|RustDesk|${{ inputs.appname }}|' {} \;
+          sed -i -e 's|Over RustDesk|Over ${{ inputs.appname }}|' ./src/lang/nl.rs
           find ./src/lang -name "*.rs" -exec sed -i -e 's|("Slogan_tip",.*)|("Slogan_tip", "${{ fromJson(inputs.extras).slogan }}")|' {} \;
               
       - name: change company name
@@ -288,40 +272,19 @@ jobs:
           customHeaders: '{"Content-Type": "application/json"}'
           data: '{"uuid": "${{ inputs.uuid }}", "status": "10% complete"}'
 
-      - name: Install Flutter
+      - name: Install flutter
         uses: subosito/flutter-action@v2
         with:
           channel: "stable"
           flutter-version: ${{ env.FLUTTER_VERSION }}
           cache: true
-      
-      - name: Enforce clippy lint for static_mut_refs
-        run: cargo clippy -- -D static_mut_refs
-  
-      - name: Clippy for unused imports
-        run: cargo clippy -- -D unused-imports
-  
-      - name: Update CocoaPods
-        run: sudo gem install cocoapods
-  
-      - name: Clean and install pods
-        run: |
-          cd flutter/macos
-          rm -rf Pods Podfile.lock
-          pod install
-
 
       - name: Patch flutter
         continue-on-error: true
         run: |
-          cd $(dirname $(dirname $(which flutter)))
-          git fetch
-          git checkout ${{ env.FLUTTER_VERSION }}
-          if git apply --check ${{ github.workspace }}/.github/patches/flutter_3.24.4_dropdown_menu_enableFilter.diff; then
-            git apply ${{ github.workspace }}/.github/patches/flutter_3.24.4_dropdown_menu_enableFilter.diff
-          else
-            echo "Patch does not apply" && exit 1
-          fi
+            cp .github/patches/flutter_3.24.4_dropdown_menu_enableFilter.diff $(dirname $(dirname $(which flutter)))
+            cd $(dirname $(dirname $(which flutter)))
+            [[ "3.24.4" == 3.24.5 ]] && git apply flutter_3.24.4_dropdown_menu_enableFilter.diff
       
       - name: Workaround for flutter issue
         shell: bash
@@ -331,27 +294,6 @@ jobs:
           sed -i -e 's/_setFramesEnabledState(false);/\/\/_setFramesEnabledState(false);/g' ../packages/flutter/lib/src/scheduler/binding.dart
           grep -n '_setFramesEnabledState(false);' ../packages/flutter/lib/src/scheduler/binding.dart
         
-      - name: Set versions based on RustDesk version
-        shell: bash
-        run: |
-          if [[ "${{ env.VERSION }}" == "1.3.8" || "${{ env.VERSION }}" == "1.3.9" ]]; then
-            echo "Using versions for RustDesk 1.3.x"
-            echo "SCITER_RUST_VERSION=1.67" >> $GITHUB_ENV
-            echo "RUST_VERSION=1.67" >> $GITHUB_ENV
-            echo "MAC_RUST_VERSION=1.67" >> $GITHUB_ENV
-            echo "FLUTTER_VERSION=3.16.9" >> $GITHUB_ENV
-            echo "ANDROID_FLUTTER_VERSION=3.16.9" >> $GITHUB_ENV
-            echo "FLUTTER_RUST_BRIDGE_VERSION=1.75.0" >> $GITHUB_ENV
-          else
-            echo "Using default versions for RustDesk >= 1.4.0"
-            echo "SCITER_RUST_VERSION=1.75" >> $GITHUB_ENV
-            echo "RUST_VERSION=1.75" >> $GITHUB_ENV
-            echo "MAC_RUST_VERSION=1.81" >> $GITHUB_ENV
-            echo "FLUTTER_VERSION=3.24.5" >> $GITHUB_ENV
-            echo "ANDROID_FLUTTER_VERSION=3.24.5" >> $GITHUB_ENV
-            echo "FLUTTER_RUST_BRIDGE_VERSION=1.80.1" >> $GITHUB_ENV
-          fi
-          
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@v1
         with:
@@ -543,31 +485,8 @@ jobs:
         continue-on-error: true
         if: fromJson(inputs.extras).statussort == 'true'
         run: |
-          # For all versions, try to apply the standard patch first
           wget https://raw.githubusercontent.com/VenimK/creator/refs/heads/master/.github/patches/statussort.diff
-          
-          # Try to apply the patch, if it fails, use sed to modify the file directly
-          if ! git apply statussort.diff 2>/dev/null; then
-            echo "Patch application failed, trying direct file modification..."
-            FILE_PATH=$(find . -name "peers_view.dart" | grep -v "build" | head -1)
-            if [ -n "$FILE_PATH" ]; then
-              echo "Found peers_view.dart at: $FILE_PATH"
-              # Make a backup of the original file
-              cp "$FILE_PATH" "${FILE_PATH}.bak"
-              # Apply changes using sed
-              sed -i '' 's/\/\/ static const String status = .*/static const String status = "Status";/' "$FILE_PATH"
-              sed -i '' 's/\/\/ PeerSortType.status/PeerSortType.status/' "$FILE_PATH"
-              sed -i '' 's/\/\/ case PeerSortType.status:/case PeerSortType.status:/' "$FILE_PATH"
-              sed -i '' 's/\/\/ \s*peers\.sort((p1, p2) => p1\.online ? -1 : 1);/          peers.sort((p1, p2) => p1.online ? -1 : 1);/' "$FILE_PATH"
-              sed -i '' 's/\/\/ \s*break;/          break;/' "$FILE_PATH"
-              echo "Successfully modified $FILE_PATH"
-            else
-              echo "Error: Could not find peers_view.dart in the repository"
-              exit 1
-            fi
-          else
-            echo "Successfully applied statussort.diff"
-          fi
+          git apply statussort.diff
 
       - name: removeNewVersionNotif
         continue-on-error: true
@@ -582,12 +501,13 @@ jobs:
           method: 'POST'
           customHeaders: '{"Content-Type": "application/json"}'
           data: '{"uuid": "${{ inputs.uuid }}", "status": "20% complete"}'
-  
-        
-      - uses: Swatinem/rust-cache@v2
-        with:
-          prefix-key: ${{ matrix.job.os }}
 
+      - name: Restore bridge files
+        uses: actions/download-artifact@master
+        with:
+              name: bridge-artifact
+              path: ./
+  
       - name: Report Status
         uses: fjogeleit/http-request-action@v1
         with:
@@ -596,29 +516,32 @@ jobs:
           customHeaders: '{"Content-Type": "application/json"}'
           data: '{"uuid": "${{ inputs.uuid }}", "status": "30% complete"}'
 
-
       - name: Setup vcpkg with Github Actions binary cache
         uses: lukka/run-vcpkg@v11
         with:
             vcpkgGitCommitId: ${{ env.VCPKG_COMMIT_ID }}
             doNotCache: false
-  
+
       - name: Install vcpkg dependencies
         run: |
           if ! $VCPKG_ROOT/vcpkg \
             install \
             --x-install-root="$VCPKG_ROOT/installed"; then
             find "${VCPKG_ROOT}/" -name "*.log" | while read -r _1; do
-              echo "$_1:"
-              echo "======"
-              cat "$_1"
-              echo "======"
-              echo ""
-            done
-            exit 1
-          fi
-          head -n 100 "${VCPKG_ROOT}/buildtrees/ffmpeg/build-${{ matrix.job.vcpkg-triplet }}-rel-out.log" || true
+                  echo "$_1:"
+                  echo "======"
+                  cat "$_1"
+                  echo "======"
+                  echo ""
+                done
+                exit 1
+              fi
+              head -n 100 "${VCPKG_ROOT}/buildtrees/ffmpeg/build-${{ matrix.job.vcpkg-triplet }}-rel-out.log" || true
 
+      - name: Create MacOS directory structure
+        run: |
+          mkdir -p ./build/macos/Build/Products/Release/RustDesk.app/Contents/MacOS
+  
       - name: Report Status
         uses: fjogeleit/http-request-action@v1
         with:
@@ -627,11 +550,6 @@ jobs:
           customHeaders: '{"Content-Type": "application/json"}'
           data: '{"uuid": "${{ inputs.uuid }}", "status": "50% complete"}'
     
-      
-      - name: Create MacOS directory structure
-        run: |
-          mkdir -p ./build/macos/Build/Products/Release/RustDesk.app/Contents/MacOS
-
       - name: Create custom.txt file
         shell: bash
         run: |
